Archive2/4e/89d290f87a8ee7/output
main.cpp:9:7: error: no matching constructor for initialization of 'A'
    A a(int(0)); // works
      ^ ~~~~~~
main.cpp:3:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const A' for 1st argument
struct A {
       ^
main.cpp:3:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'int' to 'A' for 1st argument
struct A {
       ^
main.cpp:4:5: note: candidate constructor not viable: no known conversion from 'int' to 'std::shared_ptr<int>' for 1st argument
    A(std::shared_ptr<int> p)  {}
    ^
1 error generated.
